# YouTube-Comment-Sentiment-Analysis

./: .env.example  .gitignore  LICENSE  README.md  STREAMLIT_README.md  gui_app.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_streamlit.py  setup.py  setup_and_test.py  streamlit_app.py  test_integration.py
.streamlit/: config.toml
assets/sample_data/: sample_analysis_results.json  sample_comments.json
config/: __init__.py  logging_config.py  settings.py
docs/: API.md
examples/: advanced_usage.py  basic_usage.py  batch_processing.py
src/: __init__.py  preprocessor.py  scraper.py  sentiment_analyzer.py  sentiment_rules.py  utils.py  visualizer.py
src/analyzers/: __init__.py  sentiment_analyzer.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  comment_scraper.py  comment_scraper_fixed.py  data_processor.py  sentiment_analyzer.py
src/gui/: __init__.py  dashboard.py  main_window.py
src/processors/: __init__.py  text_processor.py
src/scrapers/: __init__.py  youtube_scraper.py
src/utils/: __init__.py  data_manager.py  decorators.py  helpers.py  logger.py  validators.py
src/visualizers/: __init__.py  advanced_visualizer.py
tests/: conftest.py  requirements.txt  test_comprehensive.py  test_main.py  test_performance.py  test_sentiment_analysis.py
